Fix backdrop bug, edit header Z-index

--- a/css/browse.css
+++ b/css/browse.css
@@ -17,7 +17,7 @@ a {
 
 header {
   position: sticky;
-  z-index: 100;
+  z-index: 9998;
   top: 0;
 }
 
